--- a/src/mime_multipart/src/error.rs.html
+++ b/src/mime_multipart/src/error.rs.html
@@ -144,6 +144,30 @@
 <span id="100">100</span>
 <span id="101">101</span>
 <span id="102">102</span>
+<span id="103">103</span>
+<span id="104">104</span>
+<span id="105">105</span>
+<span id="106">106</span>
+<span id="107">107</span>
+<span id="108">108</span>
+<span id="109">109</span>
+<span id="110">110</span>
+<span id="111">111</span>
+<span id="112">112</span>
+<span id="113">113</span>
+<span id="114">114</span>
+<span id="115">115</span>
+<span id="116">116</span>
+<span id="117">117</span>
+<span id="118">118</span>
+<span id="119">119</span>
+<span id="120">120</span>
+<span id="121">121</span>
+<span id="122">122</span>
+<span id="123">123</span>
+<span id="124">124</span>
+<span id="125">125</span>
+<span id="126">126</span>
 </pre><pre class='rust '>
 <span class='comment'>// Copyright 2016 mime-multipart Developers</span>
 <span class='comment'>//</span>
@@ -161,7 +185,6 @@
 <span class='kw'>use</span> <span class='kw'>super</span>::{<span class='ident'>httparse</span>, <span class='ident'>hyper</span>};
 
 <span class='doccomment'>/// An error type for the `mime-multipart` crate.</span>
-<span class='attribute'>#[<span class='ident'>derive</span>(<span class='ident'>Debug</span>)]</span>
 <span class='kw'>pub</span> <span class='kw'>enum</span> <span class='ident'>Error</span> {
     <span class='doccomment'>/// The Hyper request did not have a Content-Type header.</span>
     <span class='ident'>NoRequestContentType</span>,
@@ -171,8 +194,12 @@
     <span class='ident'>BoundaryNotSpecified</span>,
     <span class='doccomment'>/// A multipart section contained only partial headers.</span>
     <span class='ident'>PartialHeaders</span>,
-    <span class='doccomment'>/// The request body ended prior to reaching the expected terminating boundary.</span>
-    <span class='ident'>Eof</span>,
+    <span class='ident'>EofInMainHeaders</span>,
+    <span class='ident'>EofBeforeFirstBoundary</span>,
+    <span class='ident'>NoCrLfAfterBoundary</span>,
+    <span class='ident'>EofInPartHeaders</span>,
+    <span class='ident'>EofInFile</span>,
+    <span class='ident'>EofInPart</span>,
     <span class='doccomment'>/// An HTTP parsing error from a multipart section.</span>
     <span class='ident'>Httparse</span>(<span class='ident'>httparse</span>::<span class='ident'>Error</span>),
     <span class='doccomment'>/// An I/O error.</span>
@@ -227,6 +254,16 @@
     }
 }
 
+<span class='kw'>impl</span> <span class='ident'>fmt</span>::<span class='ident'>Debug</span> <span class='kw'>for</span> <span class='ident'>Error</span> {
+    <span class='kw'>fn</span> <span class='ident'>fmt</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>, <span class='ident'>f</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>fmt</span>::<span class='ident'>Formatter</span>) <span class='op'>-&gt;</span> <span class='ident'>fmt</span>::<span class='prelude-ty'>Result</span> {
+        <span class='macro'>try</span><span class='macro'>!</span>( <span class='ident'>f</span>.<span class='ident'>write_str</span>(<span class='kw-2'>&amp;</span><span class='op'>*</span><span class='self'>self</span>.<span class='ident'>description</span>()) );
+        <span class='kw'>if</span> <span class='self'>self</span>.<span class='ident'>cause</span>().<span class='ident'>is_some</span>() {
+            <span class='macro'>try</span><span class='macro'>!</span>( <span class='macro'>write</span><span class='macro'>!</span>(<span class='ident'>f</span>, <span class='string'>&quot;: {:?}&quot;</span>, <span class='self'>self</span>.<span class='ident'>cause</span>().<span class='ident'>unwrap</span>()) ); <span class='comment'>// recurse</span>
+        }
+        <span class='prelude-val'>Ok</span>(())
+    }
+}
+
 <span class='kw'>impl</span> <span class='ident'>StdError</span> <span class='kw'>for</span> <span class='ident'>Error</span> {
     <span class='kw'>fn</span> <span class='ident'>description</span>(<span class='kw-2'>&amp;</span><span class='self'>self</span>) <span class='op'>-&gt;</span> <span class='kw-2'>&amp;</span><span class='ident'>str</span>{
         <span class='kw'>match</span> <span class='op'>*</span><span class='self'>self</span> {
@@ -235,9 +272,20 @@
                 <span class='string'>&quot;The Hyper request Content-Type top-level Mime was not multipart.&quot;</span>,
             <span class='ident'>Error</span>::<span class='ident'>BoundaryNotSpecified</span> <span class='op'>=&gt;</span>
                 <span class='string'>&quot;The Content-Type header failed to specify a boundary token.&quot;</span>,
-            <span class='ident'>Error</span>::<span class='ident'>PartialHeaders</span> <span class='op'>=&gt;</span> <span class='string'>&quot;A multipart section contained only partial headers.&quot;</span>,
-            <span class='ident'>Error</span>::<span class='ident'>Eof</span> <span class='op'>=&gt;</span>
-                <span class='string'>&quot;The request body ended prior to reaching the expected terminating boundary.&quot;</span>,
+            <span class='ident'>Error</span>::<span class='ident'>PartialHeaders</span> <span class='op'>=&gt;</span>
+                <span class='string'>&quot;A multipart section contained only partial headers.&quot;</span>,
+            <span class='ident'>Error</span>::<span class='ident'>EofInMainHeaders</span> <span class='op'>=&gt;</span>
+                <span class='string'>&quot;The request headers ended pre-maturely.&quot;</span>,
+            <span class='ident'>Error</span>::<span class='ident'>EofBeforeFirstBoundary</span> <span class='op'>=&gt;</span>
+                <span class='string'>&quot;The request body ended prior to reaching the expected starting boundary.&quot;</span>,
+            <span class='ident'>Error</span>::<span class='ident'>NoCrLfAfterBoundary</span> <span class='op'>=&gt;</span>
+                <span class='string'>&quot;Missing CRLF after boundary.&quot;</span>,
+            <span class='ident'>Error</span>::<span class='ident'>EofInPartHeaders</span> <span class='op'>=&gt;</span>
+                <span class='string'>&quot;The request body ended prematurely while parsing headers of a multipart part.&quot;</span>,
+            <span class='ident'>Error</span>::<span class='ident'>EofInFile</span> <span class='op'>=&gt;</span>
+                <span class='string'>&quot;The request body ended prematurely while streaming a file part.&quot;</span>,
+            <span class='ident'>Error</span>::<span class='ident'>EofInPart</span> <span class='op'>=&gt;</span>
+                <span class='string'>&quot;The request body ended prematurely while reading a multipart part.&quot;</span>,
             <span class='ident'>Error</span>::<span class='ident'>Httparse</span>(_) <span class='op'>=&gt;</span>
                 <span class='string'>&quot;A parse error occurred while parsing the headers of a multipart section.&quot;</span>,
             <span class='ident'>Error</span>::<span class='ident'>Io</span>(_) <span class='op'>=&gt;</span> <span class='string'>&quot;An I/O error occurred.&quot;</span>,
