--- a/src/mime_multipart/src/lib.rs.html
+++ b/src/mime_multipart/src/lib.rs.html
@@ -935,8 +935,8 @@
 }
 
 <span class='doccomment'>/// Stream a multipart body to the output `stream` given, made up of the `parts`</span>
-<span class='doccomment'>/// given.  Headers are NOT included in this stream, caller must deal with those</span>
-<span class='doccomment'>/// prior to calling stream_multipart().</span>
+<span class='doccomment'>/// given.  Top-level headers are NOT included in this stream; the caller must send</span>
+<span class='doccomment'>/// those prior to calling stream_multipart().</span>
 <span class='kw'>pub</span> <span class='kw'>fn</span> <span class='ident'>stream_multipart</span><span class='op'>&lt;</span><span class='ident'>S</span>: <span class='ident'>Write</span><span class='op'>&gt;</span>(
     <span class='ident'>stream</span>: <span class='kw-2'>&amp;</span><span class='kw-2'>mut</span> <span class='ident'>S</span>,
     <span class='ident'>boundary</span>: <span class='kw-2'>&amp;</span><span class='ident'>Vec</span><span class='op'>&lt;</span><span class='ident'>u8</span><span class='op'>&gt;</span>,
