--- a/mime_multipart/index.html
+++ b/mime_multipart/index.html
@@ -47,7 +47,7 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span><a id='src-0' class='srclink' href='../src/mime_multipart/src/lib.rs.html#8-480' title='goto source code'>[src]</a></span></h1>
+               </span><a id='src-0' class='srclink' href='../src/mime_multipart/src/lib.rs.html#8-492' title='goto source code'>[src]</a></span></h1>
 <h2 id='reexports' class='section-header'><a href="#reexports">Reexports</a></h2>
 <table><tr><td><code>pub use error::<a class='enum' href='../mime_multipart/error/enum.Error.html' title='mime_multipart::error::Error'>Error</a>;</code></td></tr></table><h2 id='modules' class='section-header'><a href="#modules">Modules</a></h2>
 <table>
@@ -100,8 +100,8 @@ the content of the parts.</p>
                            </td>
                        </tr>
                        <tr class=' module-item'>
-                           <td><a class='fn' href='fn.parse_multipart.html'
-                                  title='mime_multipart::parse_multipart'>parse_multipart</a></td>
+                           <td><a class='fn' href='fn.read_multipart.html'
+                                  title='mime_multipart::read_multipart'>read_multipart</a></td>
                            <td class='docblock short'>
                                 <p>Parse a MIME <code>multipart/*</code> from a <code>Read</code>able stream into a <code>Vec</code> of <code>Node</code>s, streaming
 files to disk and keeping the rest in memory.  Recursive <code>multipart/*</code> parts will are
@@ -109,8 +109,8 @@ parsed as well and returned within a <code>Node::Multipart</code> variant.</p>
                            </td>
                        </tr>
                        <tr class=' module-item'>
-                           <td><a class='fn' href='fn.parse_multipart_body.html'
-                                  title='mime_multipart::parse_multipart_body'>parse_multipart_body</a></td>
+                           <td><a class='fn' href='fn.read_multipart_body.html'
+                                  title='mime_multipart::read_multipart_body'>read_multipart_body</a></td>
                            <td class='docblock short'>
                                 <p>Parse a MIME <code>multipart/*</code> from a <code>Read</code>able stream into a <code>Vec</code> of <code>Node</code>s, streaming
 files to disk and keeping the rest in memory.  Recursive <code>multipart/*</code> parts will are
@@ -118,12 +118,13 @@ parsed as well and returned within a <code>Node::Multipart</code> variant.</p>
                            </td>
                        </tr>
                        <tr class=' module-item'>
-                           <td><a class='fn' href='fn.stream_multipart.html'
-                                  title='mime_multipart::stream_multipart'>stream_multipart</a></td>
+                           <td><a class='fn' href='fn.write_multipart.html'
+                                  title='mime_multipart::write_multipart'>write_multipart</a></td>
                            <td class='docblock short'>
                                 <p>Stream a multipart body to the output <code>stream</code> given, made up of the <code>parts</code>
 given.  Top-level headers are NOT included in this stream; the caller must send
-those prior to calling stream_multipart().</p>
+those prior to calling write_multipart().
+Returns the number of bytes written, or an error.</p>
                            </td>
                        </tr></table></section>
     <section id='search' class="content hidden"></section>
